--- a/app/src/main/res/layout/layout_feed_top_comment.xml
+++ b/app/src/main/res/layout/layout_feed_top_comment.xml
@@ -1,75 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/_10dp"
-    android:paddingRight="@dimen/_10dp"
-    android:layout_marginLeft="@dimen/_16dp"
-    android:layout_marginRight="@dimen/_16dp"
-    android:background="@color/color_gray2">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_60dp"
-        android:layout_gravity="right|top"
-        android:layout_marginRight="@dimen/_10dp"
-        android:src="@drawable/icon_god_comment2"></ImageView>
+    <data>
+        <variable
+            name="comment"
+            type="com.example.socialmediaapplication.model.Comment" />
+        <import type="android.text.TextUtils" />
+        <import type="android.view.View" />
+        <import type="com.example.socialmediaapplication.utils.StringConvert"/>
+    </data>
 
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/_10dp"
+        android:paddingRight="@dimen/_10dp"
+        android:layout_marginLeft="@dimen/_16dp"
+        android:layout_marginRight="@dimen/_16dp"
+        android:background="@color/color_gray2">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_60dp"
+            android:layout_gravity="right|top"
+            android:layout_marginRight="@dimen/_10dp"
+            android:src="@drawable/icon_god_comment2"></ImageView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.example.socialmediaapplication.view.MyImageView
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_20dp"
+                android:layout_marginTop="@dimen/_10dp"
+                android:orientation="horizontal">
+
+                <com.example.socialmediaapplication.view.MyImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="@dimen/_20dp"
+                    android:layout_height="@dimen/_20dp"
+                    app:image_url="@{comment.author.avatar}"
+                    app:isCircle="@{true}"
+                    tools:src="@mipmap/ic_launcher_round">
+                </com.example.socialmediaapplication.view.MyImageView>
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_20dp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/_3d3d3d"
+                    android:textSize="@dimen/_12sp"
+                    android:text="@{comment.author.name}"
+                    tools:text="用户名"></TextView>
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_12sp"
+                    android:textColor="@{comment.ugc.hasLiked?@color/color_theme:@color/_3d3d3d}"
+                    android:text="@{comment.ugc.likeCount>0?StringConvert.convertFeedUgc(comment.ugc.likeCount):@string/like}"
+                    tools:text="1000" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_2dp"
+                    android:layout_marginLeft="@dimen/_4dp"
+                    android:src="@{comment.ugc.hasLiked?@drawable/icon_cell_liked:@drawable/icon_cell_like}"
+                    tools:src="@drawable/icon_cell_like"/>
+            </LinearLayout>
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-            </com.example.socialmediaapplication.view.MyImageView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_20dp"
-                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/_36dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:layout_marginTop="@dimen/_10dp"
                 android:textColor="@color/_3d3d3d"
-                android:textSize="@dimen/_12sp"
-                tools:text="评论评论评论">
-            </TextView>
+                android:textSize="@dimen/_14sp"
+                android:visibility="@{TextUtils.isEmpty(comment.commentText)?View.GONE:View.VISIBLE}"
+                android:text="@{comment.commentText}"
+                tools:text="这是有阿萨德萨达一个啊啊纱似的扩大实际付款评论" />
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"/>
+            <!--图片和视频-->
+            <FrameLayout
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="@dimen/_10dp"
+                android:visibility="@{TextUtils.isEmpty(comment.imageUrl)?View.GONE:View.VISIBLE}">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/_12sp"
-                android:text="1000"/>
-            
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/_2dp"
-                android:layout_marginLeft="@dimen/_4dp"
-                android:src="@drawable/icon_cell_liked"/>
+                <com.example.socialmediaapplication.view.MyImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:background="@color/color_theme_10"
+                    android:visibility="@{TextUtils.isEmpty(comment.imageUrl)?View.GONE:View.VISIBLE}"
+                    app:image_url="@{comment.imageUrl}"
+                    app:isCircle="@{false}"
+                    tools:src="@mipmap/ic_launcher"></com.example.socialmediaapplication.view.MyImageView>
+
+                <ImageView
+                    android:layout_width="@dimen/_20dp"
+                    android:layout_height="@dimen/_20dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/icon_video_play"
+                    android:visibility="@{TextUtils.isEmpty(comment.videoUrl)?View.GONE:View.VISIBLE}"></ImageView>
+            </FrameLayout>
+
         </LinearLayout>
-        
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_36dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:layout_marginTop="@dimen/_10dp"
-            android:textColor="@color/_3d3d3d"
-            android:textSize="@dimen/_14sp"
-            tools:text="这是有阿萨德萨达一个啊啊纱似的扩大实际付款评论"/>
-        
-    </LinearLayout>
 
-</FrameLayout>
+
+
+    </FrameLayout>
+</layout>
