--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="_2dp">2dp</dimen>
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_36dp">36dp</dimen>
+    <dimen name="_45dp">45dp</dimen>
+    <dimen name="_25dp">25dp</dimen>
 </resources>
